Fix pane styles / overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,20 +18,17 @@ a.navbar-brand {
 }
 
 .main > section {
-  height: 400px;
   padding: 0px;
 }
 
 section .panel-body {
         padding: 0px;
+        height: 400px;
+        overflow: scroll;
 }
 
 section.panel {
       margin-left: 10px;
-}
-
-section {
-  overflow: scroll;
 }
 
 .navigation {
